--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
   --primary-text-color: #757575;
   --accent-color: #2196f3;
   --primary-white-color: #fff;
+  --primary-black-color: #000;
+  --primary-background-color: #2f303a;
   --secondary-backgound: #f5f4fa;
 }
 html {
@@ -52,21 +54,21 @@ body {
   text-decoration: none;
 }
 .logo-first {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 .logo-second-header {
-  color: #000000;
+  color: var(--primary-black-color);
 }
 .logo-second-footer {
-  color: #ffffff;
+  color: var(--primary-white-color);
 }
 /* page header */
 .header-line {
-  background-color: #ffffff;
+  background-color: var(--primary-white-color);
 }
 .page-header {
   display: flex;
-  background-color: #ffffff;
+  background-color: var(--primary-white-color);
 }
 
 .page-header .container {
@@ -92,7 +94,7 @@ body {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  color: #212121;
+  color: var(--title-text-color);
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -113,16 +115,18 @@ body {
 .contacts {
   display: flex;
 }
-.contacts a {
-  display: block;
+.address-link {
+  display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
-  color: #757575;
+  color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+  align-items: center;
+  justify-content: center;
 }
 .contacts a:hover,
 .contacts a:focus {
@@ -131,20 +135,45 @@ body {
 .contact-info:not(:last-child) {
   margin-right: 50px;
 }
+.address-icon {
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  fill: rgba(117, 117, 117, 1);
+  stroke: currentColor;
+}
+.address-icon-2 {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: rgba(117, 117, 117, 1);
+  stroke: currentColor;
+}
 .main {
   border-top: 1px solid rgba(236, 236, 236, 1);
 }
 /* hero */
 .hero-section {
+  max-width: 1600px;
+  height: 600px;
+  margin-right: auto;
+  margin-left: auto;
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: #2f303a;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/main-page/Img-hero.jpg);
+  background-color: var(--primary-background-color);
+  background-size: cover;
   text-align: center;
 }
 .hero-title {
   margin-top: 0;
-  margin-bottom: 30;
-  color: #ffffff;
+  margin-bottom: 30px;
+  color: var(--primary-white-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -163,10 +192,12 @@ body {
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
+  border: none;
 }
 .button.primary {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+  border-color: var(--accent-color);
   font-family: Roboto;
 }
 .button.filter {
@@ -180,8 +211,12 @@ body {
 }
 .button.filter:hover,
 .button.filter:focus {
-  background-color: #2196f3;
+  background-color: var(--accent-color);
   color: var(--primary-white-color);
+  border-color: var(--accent-color);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
 /* section */
 .section {
@@ -189,11 +224,15 @@ body {
   padding-bottom: 94px;
   justify-content: center;
 }
+.section-employments {
+  padding-top: 0;
+  padding-bottom: 94px;
+}
 .section.team {
   padding-top: 94px;
   padding-bottom: 94px;
   margin-bottom: 0;
-  background-color: #f5f4fa;
+  background-color: var(--secondary-backgound);
 }
 .title {
   margin-top: 0;
@@ -233,10 +272,20 @@ body {
 .skills-item:not(:last-child) {
   margin-right: 30px;
 }
-/* emplouments*/
-.section-employments {
-  padding: 30;
+.skills-item-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+  background-color: var(--secondary-backgound);
+  border-radius: 4px;
 }
+.skills-item-svg {
+  color: var(--title-text-color);
+}
+/* emplouments*/
 .employments {
   display: flex;
   justify-content: center;
@@ -247,7 +296,7 @@ body {
 }
 /* team */
 .team-about {
-  margin-bottom: 0;
+  margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.19;
 }
@@ -266,19 +315,100 @@ body {
   margin-right: 30px;
 }
 .team-item {
-  background-color: #ffffff;
+  background-color: var(--primary-white-color);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-
 .team-text {
   padding: 30px;
   text-align: center;
 }
+.social-icons {
+  display: inline-flex;
+}
+.social-icons-item:not(:last-child) {
+  margin-right: 10px;
+}
+.social-icons-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: var(--primary-white-color);
+}
+.social-icons-link:hover .social-icons-svg,
+.social-icons-link:focus .social-icons-svg {
+  width: 20px;
+  height: 20px;
+  fill: rgba(255, 255, 255, 1);
+  background: rgba(33, 150, 243, 1);
+}
+.social-icons-link:hover,
+.social-icons-link:focus {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(33, 150, 243, 1);
+}
+.social-icons-svg {
+  width: 20px;
+  height: 20px;
+  fill: #afb1b8;
+}
+
+/* our clients */
+.our-clients {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.our-clients-item {
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+.our-clients-position {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+}
+.our-clients-svg {
+  width: 106px;
+  height: 60px;
+  fill: rgba(175, 177, 184, 1);
+}
+.our-clients-item:not(:last-child) {
+  margin-right: 30px;
+}
+.our-clients-position:hover .our-clients-svg,
+.our-clients-position:focus .our-clients-svg {
+  fill: rgba(33, 150, 243, 1);
+}
+.our-clients-position:hover {
+  border: 1px solid rgba(33, 150, 243, 1);
+}
 /* footer nav */
+.footer-logo {
+  display: block;
+  margin-bottom: 20px;
+  font-family: Raleway, cursive;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  text-decoration: none;
+}
 .address-text {
-  color: #ffffff;
+  color: var(--primary-white-color);
   font-style: normal;
   margin-top: 20px;
   margin-bottom: 9px;
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.7;
 }
 .address a {
   padding-top: 0;
@@ -300,6 +430,9 @@ body {
   color: var(--accent-color);
 }
 .footer {
+  background-color: var(--primary-background-color);
+}
+.footer-line {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
@@ -307,10 +440,51 @@ body {
   padding-bottom: 60px;
   margin-right: auto;
   margin-left: auto;
+  display: flex;
 }
-.footer-line {
-  background-color: #2f303a;
+.footer-address {
+  margin-right: 70px;
 }
+.title-icons {
+  margin-top: 0;
+  margin-bottom: 20px;
+  padding-top: 8px;
+  padding-bottom: 3px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
+}
+.footer-social-icons-svg {
+  width: 20px;
+  height: 20px;
+  fill: var(--primary-white-color);
+}
+.footer-social-icons-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.footer-social-icons-link:hover .footer-social-icons-svg,
+.footer-social-icons-link:focus .footer-social-icons-svg {
+  width: 20px;
+  height: 20px;
+  fill: rgba(255, 255, 255, 1);
+  background: rgba(33, 150, 243, 1);
+}
+.footer-social-icons-link:hover,
+.footer-social-icons-link:focus {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(33, 150, 243, 1);
+}
+
 /* portfolio */
 .list-title-portfolio {
   color: var(--title-text-color);
@@ -322,6 +496,7 @@ body {
 .portfolio-about {
   font-size: 16px;
   line-height: 1.87;
+  color: var(--primary-text-color);
 }
 .section.portfolio {
   margin-bottom: 94px;
@@ -351,10 +526,22 @@ body {
   flex-wrap: wrap;
   justify-content: center;
 }
+.cards-item {
+}
+.cards-link {
+  display: inline-block;
+  text-decoration: none;
+}
+.cards-img {
+}
 .portfolio-item {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+}
+.cards-link:hover,
+.cards-link:focus {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .portfolio-item:nth-child(3n) {
   margin-right: 0;
